Several bug fixes in tag editor

--- a/DanceCalc/m4d/Views/Song/EditCore.cshtml
+++ b/DanceCalc/m4d/Views/Song/EditCore.cshtml
@@ -213,12 +213,12 @@
         </div>
     </div>
 
-    <hr class="row col-md-12" />
+    @*<hr class="row col-md-12" />
 
     <p class="row col-md-12">
             <button type="button" id="load-genre-tags" class="btn btn-small btn-default" role="button">Genre</button>
             <button type="button" id="load-user-genre-tags" class="btn btn-small btn-default" role="button">User</button>
-    </p>
+    </p>*@
 
     <p class="row col-md-12">
         <input type="hidden" name="filter" value="@ViewBag.SongFilter"/>
