Add inital log test

--- a/DanceCalc/m4d/Views/ApplicationUsers/Details.cshtml
+++ b/DanceCalc/m4d/Views/ApplicationUsers/Details.cshtml
@@ -19,6 +19,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.Id)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Id)
+        </dd>
+
+        <dt>
             Role(s)
         </dt>
 
