Write test for Undo & some cleanup

--- a/DanceCalc/m4d/Views/Shared/_TagCloud.cshtml
+++ b/DanceCalc/m4d/Views/Shared/_TagCloud.cshtml
@@ -16,7 +16,7 @@
 }
 
 <div>
-    @* TODONEXT: Figure out if we want to do something logarithmic with the tag grouping, aslo trim tags with count < n - user controlled? *@
+    @* TODO: Figure out if we want to do something logarithmic with the tag grouping, also trim tags with count < n - user controlled? *@
     @foreach (var titem in tags)
     {
         if (titem.Count == 0)
