--- a/DanceCalc/m4d/Views/Admin/Index.cshtml
+++ b/DanceCalc/m4d/Views/Admin/Index.cshtml
@@ -44,6 +44,7 @@
     <li>@Html.ActionLink("Infer Dance Types", "InferDanceTypes")</li>
     <li>@Html.ActionLink("Clear Song Cache", "ClearSongCache")</li>
     <li>@Html.ActionLink("Update Spotify Regions", "SpotifyRegions", "Admin", new { count = 500 }, null)</li>
+    <li>@Html.ActionLink("Region Stats", "RegionStats", "Admin")</li>
 </ul>
 
 <h3>Tracing (Current Level = @ViewBag.TraceLevel)</h3>
