--- a/DanceCalc/m4d/Views/Shared/_TagEditor.cshtml
+++ b/DanceCalc/m4d/Views/Shared/_TagEditor.cshtml
@@ -32,26 +32,8 @@
                      <div class="row">
                          <div class="col-md-12">
                              <b>Tags: </b>
-                             <!-- ko foreach: tagSuggestions().current().chosen -->
-                             <span class="label" data-bind="css:'label-' + $root.tagSuggestions().current().type().toLowerCase()" style="margin-right: 5px">
-                                <a role="button" class="tag-text" data-bind="click: function() {$root.tagSuggestions().current().removeTag($data);}">
-                                    <span data-bind="text:$data"></span>&nbsp;<span class="glyphicon glyphicon-remove-sign"></span>
-                                </a>
-                            </span>
-                             <!-- /ko -->
-                             <hr data-bind="css: tagSuggestions().current().hrClass" />
+                             <select id="chosen" class="chosen" multiple="true" data-bind="options: tagSuggestions().current().popular, optionsText: 'value', selectedOptions: tagSuggestions().current().chosen, chosen: true"></select>
                          </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-12">
-                            <form class="form-inline">
-                                <div class="form-group">
-                                    <label for="new-tags">New Tags:</label>
-                                    <input type="text" style="min-width:300px" class="form-control" id="new-tags" placeholder="tag1, tag2, tag 3, another tag" data-bind="textInput:tagSuggestions().newTags, css:tagSuggestions().current().typeClass" />
-                                </div>
-                                <button id="add-new" class="btn btn-default" data-bind="click:tagSuggestions().addNewTags">Add</button>
-                            </form>
-                        </div>
                     </div>
                     @Suggestions("user", "Tags that you've used:")
                     @Suggestions("popular", "Tags that others have used:")
