--- a/DanceCalc/m4d/Views/Song/ItemTags.cshtml
+++ b/DanceCalc/m4d/Views/Song/ItemTags.cshtml
@@ -1,6 +1,6 @@
 ﻿<script type="text/html" id="tag-template">
     <span data-bind="foreach: list">
-        <span class="label" data-bind="css:'label-' + $parent.nameLower()" style="margin-right: 5px">
+        <span class="label" data-bind="css:'label-' + $parent.nameLower()" style="margin-right: 5px; line-height:2.5">
             <img data-bind="attr: {src: imageSrc}" width="14" height="14"/>
             <a role="button" class="tag-text" data-bind="text: tag, attr: {href: url}"></a>
             <a role="button" href="#!" class="glyphicon tag-text" data-bind="css:tagClass, click:toggleUser, visible:$root.canTag" data-show="tooltip" data-original-title="Click to add or remove from your tags"></a>
