Add some more help options + Fix a couple of small things with tag filtering

--- a/DanceCalc/m4d/App_Code/TagHelpers.cshtml
+++ b/DanceCalc/m4d/App_Code/TagHelpers.cshtml
@@ -64,6 +64,7 @@
             }
             <li><a href="@string.Format(url, "%2B")">List all songs tagged as @tag.TagValue</a></li>
             <li><a href="@string.Format(url, "%2D")">List all songs not tagged as @tag.TagValue</a></li>
+            <li><a href="https://www.music4dance.net/blog/tag-filtering">Help</a></li>
         </ul>
     </div>
 }
