--- a/DanceCalc/m4d/Views/Shared/_TagEditor.cshtml
+++ b/DanceCalc/m4d/Views/Shared/_TagEditor.cshtml
@@ -40,6 +40,7 @@
                 </div>
             </div>
             <div class="modal-footer">
+                <a class="btn btn-default" href="https://www.music4dance.net/blog/music4dance-help/tag-editing/"><span class="glyphicon glyphicon-question-sign"></span></a>
                 <button id="addTagsOkay" type="button" class="btn btn-default" data-dismiss="modal">Save</button>
             </div>
         </div>
