--- a/DanceCalc/m4d/Views/Shared/_ListSongs.cshtml
+++ b/DanceCalc/m4d/Views/Shared/_ListSongs.cshtml
@@ -15,6 +15,68 @@
     SongFilter filter = ViewData.ContainsKey("SongFilter") ? ViewBag.SongFilter : new SongFilter();
 }
 
+@helper ArtistHeader(bool canSort, SongSort songOrder, SongFilter filter)
+{
+    if (canSort)
+    {
+        @Html.ActionLink("Artist", "Sort", "Song", new { sortOrder = "Artist", filter }, null)
+        @Html.Raw(songOrder.GetSortGlyph("Artist"))
+    }
+    else
+    {
+        <text>Artist</text>
+    }
+}
+
+@helper Artist(SongBase song)
+{
+    if (!string.IsNullOrWhiteSpace(song.Artist))
+    {
+        @Html.ActionLink(song.Artist, "search", "song", new { searchString = song.Artist, dances = "ALL" }, null)
+    }
+}
+
+@helper TagHeader(SongFilter filter)
+{
+    <text>Tags</text>
+    if (!string.IsNullOrWhiteSpace(filter.Tags))
+    {
+        var tags = new TagList(filter.Tags);
+        var inc = tags.ExtractAdd();
+        var exc = tags.ExtractRemove();
+        if (!inc.IsEmpty)
+        {
+            <br /><span>Included:</span>
+            foreach (var tag in inc.Tags)
+            {
+                if (!tag.Contains(':')) {continue;}
+
+                var rg = tag.Split(':');
+                var url = "/song/removetags?tags=" + WebUtility.UrlEncode(tag) + "&filter=" + WebUtility.UrlEncode(filter.ToString());
+                var img = "/Content/" + TagType.ClassToName(rg.Length > 0 ? rg[1] : "tag") + "-50.png";
+                <span class="label label-@rg[1].ToLower()" style="margin-right: 5px"><a role="button" class="tag-text" href="@url"><img src="@img" height="12" width="12" />@rg[0] <span class="glyphicon glyphicon-remove-sign"></span></a></span>
+            }
+        }
+        if (!exc.IsEmpty)
+        {
+            <br /><span>Excluded:</span>
+            foreach (var tag in exc.Tags)
+            {
+                var rg = tag.Split(':');
+                var url = "/song/removetags?tags=" + WebUtility.UrlEncode(tag) + "&filter=" + WebUtility.UrlEncode(filter.ToString());
+                <span class="label label-@rg[1].ToLower()" style="margin-right: 5px"><a role="button" class="tag-text" href="@url">@rg[0] <span class="glyphicon glyphicon-remove-sign"></span></a></span>
+            }
+        }
+    }
+}
+
+@helper Tags(SongBase song, SongFilter filter) 
+{
+    foreach (var titem in song.TagSummary.Tags.Where(t => !string.Equals(t.TagClass, "dance", StringComparison.OrdinalIgnoreCase)))
+    {
+        @TagHelpers.TagButton(titem, filter)
+    }
+}
 
 <table class="table table-striped table-songs">
     <thead>
@@ -38,19 +100,15 @@
                 {
                     <text>Title</text>
                 }
+                @if (!hideArtist)
+                {
+                    <span class="visible-xs"> - @ArtistHeader(canSort, songOrder, filter)</span>
+                }
             </th>
             @if (!hideArtist)
             {
-                <th style="min-width:75pt">
-                    @if (canSort)
-                    {
-                        @Html.ActionLink("Artist", "Sort", "Song", new { sortOrder = "Artist", filter }, null)
-                        @Html.Raw(songOrder.GetSortGlyph("Artist"))
-                    }
-                    else
-                    {
-                        <text>Artist</text>
-                    }
+                <th class="hidden-xs" style="min-width:75pt">
+                    @ArtistHeader(canSort,songOrder,filter)
                 </th>
             }            
             @if (albumName == null)
@@ -105,42 +163,10 @@
                     {
                         <text>Dances</text>
                     }
+                    <span class="visible-xs"> - @TagHeader(filter)</span>
                 </th>
             }
-            <th>
-                Tags
-                @if (!string.IsNullOrWhiteSpace(filter.Tags))
-                {
-                    var tags = new TagList(filter.Tags);
-                    var inc = tags.ExtractAdd();
-                    var exc = tags.ExtractRemove();
-                    if (!inc.IsEmpty)
-                    {
-                        <br/><span>Included:</span>
-                        foreach (var tag in inc.Tags)
-                        {
-                            if (!tag.Contains(':')) {continue;}
-                            
-                            var rg = tag.Split(':');
-                            var url = "/song/removetags?tags=" + WebUtility.UrlEncode(tag) + "&filter=" + WebUtility.UrlEncode(filter.ToString());
-                            var img = "/Content/" + TagType.ClassToName(rg.Length > 0 ? rg[1] : "tag") + "-50.png";
-                            <span class="label label-@rg[1].ToLower()" style="margin-right: 5px"><a role="button" class="tag-text" href="@url"><img src="@img" height="12" width="12" />@rg[0] <span class="glyphicon glyphicon-remove-sign"></span></a></span>
-                        }
-
-                    }
-                    if (!exc.IsEmpty)
-                    {
-                        <br /><span>Excluded:</span>
-                        foreach (var tag in exc.Tags)
-                        {
-                            var rg = tag.Split(':');
-                            var url = "/song/removetags?tags=" + WebUtility.UrlEncode(tag) + "&filter=" + WebUtility.UrlEncode(filter.ToString());
-                            <span class="label label-@rg[1].ToLower()" style="margin-right: 5px"><a role="button" class="tag-text" href="@url">@rg[0] <span class="glyphicon glyphicon-remove-sign"></span></a></span>
-                        }
-
-                    }
-                }
-            </th>
+            <th class="@(hideDances ? string.Empty : "hidden-xs")">@TagHeader(filter)</th>
             @if (isAdmin)
             {
                 <th></th>
@@ -158,39 +184,39 @@
     <tbody>
         @foreach (var item in Model)
         {
-            SongDetails sd = null;
-            if (albumName != null)
-            {
-                sd = item as SongDetails;
-            }
-            List<DanceRating> scaledDances = null;
-            if (item.DanceRatings != null)
-            {
-                scaledDances = item.DanceRatings.OrderByDescending(dr => SongCounts.GetScaledRating(danceMap, dr.DanceId, dr.Weight)).ToList();
-            }
-            string tempoString = null;
-            if (item.Tempo.HasValue)
-            {
-                var numerator = 4;
-                if (scaledDances != null && scaledDances.Count > 0)
-                {
-                    var did = scaledDances[0].DanceId;
-                    if (!string.IsNullOrWhiteSpace(did))
-                    {
-                        var d = Dances.Instance.DanceDictionary[did];
-                        numerator = d.Meter.Numerator;
-                    }
-                }
-                tempoString = string.Format("<a href='/home/counter?numerator={1}&tempo={0}'>{0}</a>", decimal.Round(item.Tempo.Value), numerator);
-            }
+                                SongDetails sd = null;
+                                if (albumName != null)
+                                {
+                                    sd = item as SongDetails;
+                                }
+                                List<DanceRating> scaledDances = null;
+                                if (item.DanceRatings != null)
+                                {
+                                    scaledDances = item.DanceRatings.OrderByDescending(dr => SongCounts.GetScaledRating(danceMap, dr.DanceId, dr.Weight)).ToList();
+                                }
+                                string tempoString = null;
+                                if (item.Tempo.HasValue)
+                                {
+                                    var numerator = 4;
+                                    if (scaledDances != null && scaledDances.Count > 0)
+                                    {
+                                        var did = scaledDances[0].DanceId;
+                                        if (!string.IsNullOrWhiteSpace(did))
+                                        {
+                                            var d = Dances.Instance.DanceDictionary[did];
+                                            numerator = d.Meter.Numerator;
+                                        }
+                                    }
+                                    tempoString = string.Format("<a href='/home/counter?numerator={1}&tempo={0}'>{0}</a>", decimal.Round(item.Tempo.Value), numerator);
+                                }
 
-            if (item.Title != null)
-            {
+                                if (item.Title != null)
+                                {
                 <tr>
                     <td>
                         @if (!string.IsNullOrWhiteSpace(item.Purchase))
-                        {
-                            var id = "Play" + item.SongId;
+                                            {
+                                        var id = "Play" + item.SongId;
                             <div class="btn-group">
                                 <a href="#" id="@id" role="button" class="btn dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><img src="@Url.Content("~/Content/playbutton.png")" alt="Play" width="20" height="20" /></a>
                                 <ul class="dropdown-menu" role="menu">
@@ -219,10 +245,10 @@
                         }
                     </td>
                     @if (isAdmin)
+                {
+                    var id = "Selected-" + item.SongId;
+                    if (canSort)
                     {
-                        var id = "Selected-" + item.SongId;
-                        if (canSort)
-                        {
                             <td><input name="selectedSongs" id="@id" type="checkbox" value="@item.SongId" /></td>
                         }
                         <td><a href="/song/edit?id=@item.SongId&filter=@filter" role="button" class="btn btn-link btn-sm"><span class="glyphicon glyphicon-pencil"></span></a></td>
@@ -231,23 +257,19 @@
                     <td>
                         @Html.ActionLink(item.Title, "details", "song", new { id = item.SongId, filter }, null)
                         @if (tempoString != null)
-                        {
+                {
                             <small class="hidden-sm hidden-md hidden-lg">(@Html.Raw(tempoString) BPM)</small>
                         }
+                        <span class="visible-xs"> - @Artist(item)</span>
                     </td>
 
                     @if (!hideArtist)
-                    {
-                        <td>
-                            @if (!string.IsNullOrWhiteSpace(item.Artist))
-                            {
-                                @Html.ActionLink(item.Artist, "search", "song", new { searchString = item.Artist, dances = "ALL" }, null)
-                            }
-                        </td>
+                {
+                        <td class="hidden-xs">@Artist(item)</td>
                     }
 
-                    @if (albumName == null)
-                    {
+                        @if (albumName == null)
+                {
                         @*<td class="hidden-xs">
                                 @if (!string.IsNullOrWhiteSpace(item.AlbumName))
                                 {
@@ -317,15 +339,10 @@
                                        data-content='@content'>@Html.Raw(label)</a>
                                 }
                             }
+                            <span class="visible-xs">@Tags(item, filter)</span>
                         </td>
                     }
-                    <td>
-                        @foreach (var titem in item.TagSummary.Tags.Where(t => !string.Equals(t.TagClass, "dance", StringComparison.OrdinalIgnoreCase)))
-                        {
-                            @TagHelpers.TagButton(titem, ViewBag.SongFilter)
-                        }
-                    </td>
-
+                    <td class="@(hideDances ? string.Empty : "hidden-xs")">@Tags(item,filter)</td>
 
                     @if (isAdmin)
                     {
