--- a/DanceCalc/m4d/Content/Site.css
+++ b/DanceCalc/m4d/Content/Site.css
@@ -397,3 +397,5 @@ a.text-other:hover,
 .cloud-7 {font-size: 240%}
 .cloud-8 {font-size: 260%}
 .cloud-9 {font-size: 280%}
+
+.body-text {font-family: Source Sans Pro;}
