Test Trade Doubler

--- a/DanceCalc/m4d/Views/Home/About.cshtml
+++ b/DanceCalc/m4d/Views/Home/About.cshtml
@@ -18,7 +18,11 @@
         <h1 class="tools">Tools</h1>
         <p class="neutral">Do you have a favorite song (or songs) that you would like to match to a dance style?  Use our <a href="/home/counter">dance counter page</a> to help you answer that question.</p>
         <p class="neutral">Are you curious about how fast quickstep is compared to jive?  Or are you starting practice to competition tempo music and aren't quite sure what tempo to dance Paso Doble to?  Use our <a href="/home/tempi">dance tempi page</a> to explore the relationships between dance tempi as well as the tempi prescribed for partern dances by several organizations that regulate dance competitions.</p>
-        <p class="neutral">We have more useful tools for dancers coming soon.  <a href="mailto:david@music4dance.net">Let us know</a> if you have an idea for a tool that could help match music to dances or otherwise help dancers find music.</p>
+        <p class="neutral">We have more useful tools for dancers coming soon. <a href="mailto:david@music4dance.net">Let us know</a> if you have an idea for a tool that could help match music to dances or otherwise help dancers find music.
+        </p>
+
+        <p><a href="http://clkde.tradedoubler.com/click?p=259740&a=1992014&g=0&url=https%3a%2f%2fwww.microsoft.com%2fen-US%2fstore%2fmusic%2falbum%2fbilly-joel%2fthe-stranger-remastered%2f8D6KGX51GFJJ%3fsource%3dlinkbuilder" title="The Stranger (Remastered)"><img src="http://musicimage.xboxlive.com/content/music.album.8D6KGX51GFJJ/image?locale=en-US&w=100&h=100" /></a>
+</p>
     </div>
     <div class="col-md-4">
         <h1 class="blog">Info</h1>
