--- a/DanceCalc/m4d/Views/Admin/Index.cshtml
+++ b/DanceCalc/m4d/Views/Admin/Index.cshtml
@@ -167,4 +167,5 @@
     <li>@Html.ActionLink("Century", "ScrapeDances", new { id = "Century" })</li>
     <li>@Html.ActionLink("DanceForum", "ScrapeDances", new { id = "danceforums" })</li>
     <li>@Html.ActionLink("DWTS", "ScrapeDances", new { id = "dwts" })</li>
+    <li>@Html.ActionLink("WDW", "ScrapeDances", new { id = "WDW" })</li>
 </ul>
