Add in multi-dance selection

--- a/DanceCalc/m4d/Views/Song/Dances.cshtml
+++ b/DanceCalc/m4d/Views/Song/Dances.cshtml
@@ -15,6 +15,6 @@
     </ul>
 
     <div style="margin:0 10px 10px 10px" data-bind="visible:canTag">
-        @Html.DropDownList("addDance", ViewBag.DanceList as IEnumerable<SelectListItem>, new { @class = "chzn-select", data_placeholder = "Add a dance style..."})
+        @Html.DropDownList("addDance", ViewBag.DanceList as IEnumerable<SelectListItem>, new { @class = "chosen-select", data_placeholder = "Add a dance style..."})
     </div>
 </div>
